[package]
name = "sqlx-type"
version = "0.3.16"
authors = ["Jakob Truelsen <antialize@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
keywords = [ "mysql", "sqlx", "typer" ]
readme = "README.md"
repository = "https://github.com/antialize/sqlx-type/"
homepage = "https://github.com/antialize/sqlx-type/"
description = "Typed sql macros for sqlx"

[workspace]
members = ["sqlx-type-macro", "."]

[dev-dependencies]
sqlx = { version = "0.7", default-features = false, features = ["chrono", "runtime-tokio-native-tls", "mysql"] }

[dependencies]
sqlx-type-macro = { version = "0.3.16", path = "./sqlx-type-macro"}
chrono = "0.4"
