[package]
name = "sqlx-type-macro"
version = "0.1.4"
authors = ["Jakob Truelsen <antialize@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
keywords = [ "mysql", "sqlx", "procmacro" ]
repository = "https://github.com/antialize/sqlx-type/"
homepage = "https://github.com/antialize/sqlx-type/"
description = "Proc macros for sqlx-type"

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "1", features = ["full", "parsing"] }
proc-macro2 = "1"
sql-type = "0.4.2"
once_cell = "1.9.0"
ariadne = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
